--- a/main.html
+++ b/main.html
@@ -1,16 +1,37 @@
 <!DOCTYPE html>
-
 <html>
-
 <head>
-	<link rel="stylesheet" href="styles.css">
-</head>
+    <style>
+        .container {
+            width: 400px;
+            padding: 30px;
+            background-color: #d3d3d3;
+            border: 3px solid black;
+            border-radius: 40px;
+            text-align: center;
+            margin: 40px auto;
+        }
 
+        .red, .green, .yellow {
+            width: 80px;
+            height: 80px;
+            border-radius: 50%;
+            display: inline-block;
+            margin: 0 10px;
+        }
+
+        .green { background-color: green; }
+        .yellow { background-color: yellow; }
+        .red { background-color: red; }
+    </style>
+</head>
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+
+<div class="container">
+    <div class="green"></div>
+    <div class="yellow"></div>
+    <div class="red"></div>
+</div>
 
 </body>
-
 </html>
